--- a/lab7.Rmd
+++ b/lab7.Rmd
@@ -9,11 +9,15 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Bootstrapping Linear Models 
+# Bootstrapping Linear Models
+
 To show that bootstrapping regression estimates is a reasonable thing to do, we will compare the distribution derived from the bootstrap to the actual sampling distribution, which we can simulate. In practice, we cannot simulate the true sampling distribution, but can only get the bootstrap distribution.
 
 ## Settings where the model based sampling distribution holds
+
 We first show that bootstrapping linear models can indeed be a reasonable thing to do when the data satisfies all our assumptions. In particular, we can see that as $n$ grows larger, the bootstrap distribution grows more and more similar to the distribution of the test statistic we would get from simulations as well as the model based sampling distribution. We can see that the empirical bootstrap and wild bootstrap both work reasonably well. The simulated sampling distribution should be more or less the same each time you run the code below. However, the bootstrap distribution depends on the observed data, it will change each time you run the code. Run it several times to see how the bootstrap distribution changes from run to run. Then, try increasing $n = 20, 100, 400$. In the plots, the bootstrap distribution is shown with the histogram, the true sampling distribution is shown in red, and the model based sampling distribution is shown in blue.
+
+x \<- seq(0, 10, by = 10/(n-1))
 
 ```{r}
 ## Homoscedastic linear model
@@ -22,7 +26,8 @@ We first show that bootstrapping linear models can indeed be a reasonable thing 
 
 sim.size <- 5000
 b <- 1
-n <- 20
+n <-400
+
 # Fixed Design 
 x <- seq(0, 10, by = 10/(n-1))
 y <- 1 + b * x + rnorm(n)
@@ -86,6 +91,7 @@ lines(seq(-5, 5, by = .01), dnorm(seq(-5, 5, by = .01), mean = 0, sd = sqrt(1 / 
 ```
 
 ## Settings where the model based sampling distribution holds
+
 In the settings above, all our assumptions hold, so the model based sampling distribution also holds. However, when the homoscedasticity assumption does not hold, the model based sampling distribution is no longer correct. As we will see though, the bootstrap distribution can still approximate the true sampling distribution (shown in red) well. When $n$ is small, that the histogram (bootstrap) may not be so close to the red (true sampling distribution). However, as $n$ increases, the histogram (bootstrap) generally agrees with the red (true sampling distribution), but the the blue (model based) does not. Try this with multiple times with $n = 20, 100, 400$.
 
 ```{r}
@@ -95,7 +101,7 @@ In the settings above, all our assumptions hold, so the model based sampling dis
 
 sim.size <- 5000
 b <- 1
-n <- 20
+n <- 200
 # Fixed Design 
 x <- seq(0, 10, by = 10/(n-1))
 y <- 1 + b * x + rnorm(n, sd = x / 3)
@@ -160,7 +166,8 @@ lines(seq(-5, 5, by = .01), dnorm(seq(-5, 5, by = .01), mean = 0, sd = sqrt(1 / 
 ```
 
 ## Non-standard quantities
-Finally, we can see that the bootstrap approximates the sampling distribution of quantities for which the sampling distribution would be hard compute. In particular, we will look at the sampling distribution of $\hat b_1 / \hat b_2$.  
+
+Finally, we can see that the bootstrap approximates the sampling distribution of quantities for which the sampling distribution would be hard compute. In particular, we will look at the sampling distribution of $\hat b_1 / \hat b_2$.
 
 ```{r}
 ## Homoscedastic linear model
@@ -169,7 +176,7 @@ Finally, we can see that the bootstrap approximates the sampling distribution of
 
 sim.size <- 5000
 b <- c(1, 2)
-n <- 100
+n <- 400
 # Fixed Design 
 x <- mvtnorm::rmvnorm(n, sigma = matrix(c(1, .2, .2, 1), byrow = T, 2, 2))
 y <- 1 + x %*% b + rnorm(n)
@@ -234,8 +241,9 @@ lines(density(rec.sim), col = "red", lwd = 2)
       
 ```
 
-## Bootstrapping Linear Models 
-The R package `lmboot` can do the bootstrap with a single function (instead of the for loop we used above). We'll examine the housing price data set again, and fit a model which predicts the $\log(\text{price})$ given the $\log(\text{area})$,  bedrooms, bathrooms, whether there is a garage, and quality.
+## Bootstrapping Linear Models
+
+The R package `lmboot` can do the bootstrap with a single function (instead of the for loop we used above). We'll examine the housing price data set again, and fit a model which predicts the $\log(\text{price})$ given the $\log(\text{area})$, bedrooms, bathrooms, whether there is a garage, and quality.
 
 ```{r}
 # install.packages("lmboot")
@@ -256,7 +264,8 @@ mod <- lm(log(price) ~ log(area) + bed + bath + garage + quality,
 summary(mod)
 ```
 
-We can now form confidence intervals for each of the parameters using a bootstrap procedure. We can see that in this case, each of the procedures we use to create confidence intervals aren't too dissimilar. This should hopefully be reassuring that our model assumptions aren't too unreasonable.  
+We can now form confidence intervals for each of the parameters using a bootstrap procedure. We can see that in this case, each of the procedures we use to create confidence intervals aren't too dissimilar. This should hopefully be reassuring that our model assumptions aren't too unreasonable.
+
 ```{r}
 ## Gives list of parameter estimates from each empirical bootstrap
 # (or paired boostrap) resample
@@ -302,9 +311,11 @@ coefci(mod, level = .95, vcov. = vcovHC(mod, type = "HC3"))
 \newpage
 
 # Mixed Effects Models
+
 To examine mixed effects models, we will explore ecology data from "Integrative modelling reveals mechanisms linking productivity and plant species richness" by [Grace et. al. (2016, Nature)](https://www.nature.com/articles/nature16524). In particular, the authors are interested in modeling the relationship between the producitivity of a particular plot of land and the species richness of that plot of land. Take a moment to briefly skim the paper (or abstract).
 
 We can fit a model to predict $\log(richness)$ from $\log(productivity)$ and $\log(total biomass)$.
+
 ```{r}
 library(lme4)
 fileName <- "https://raw.githubusercontent.com/ysamwang/btry6020_sp22/main/lectureData/grace_plot_level.csv"
@@ -319,13 +330,15 @@ dim(dat)
 
 
 # Fit a linear model which disregards the site structure
-mod <- lm(ln.prich~ ln.ptotmass + ln.pprod, data = dat)
+mod <- lm(ln.prich ~ ln.ptotmass + ln.pprod, data = dat)
 summary(mod)
 
 ```
 
 ### Questions
-* Check the model we fit above. Do the linear model assumptions seem to hold?
+
+-   Check the model we fit above. Do the linear model assumptions seem to hold?
+
 ```{r}
 #scatterplots:
 pairs(~ln.ptotmass+ln.pprod+ln.prich,data=dat)
@@ -339,17 +352,17 @@ qqnorm(mod$residuals)
 qqline(mod$residuals)
 ```
 
-* In their data set, they have recorded characteristics about 1,126 plots of land, and each of those plots are situated in 1 of 39 different sites. What suspicions does this raise about the independence assumption?
-
+-   In their data set, they have recorded characteristics about 1,126 plots of land, and each of those plots are situated in 1 of 39 different sites. What suspicions does this raise about the independence assumption?
 
 We can account for potential dependence across site using either a fixed effect or random effect.
+
 ```{r}
 # Fit model with a fixed effect for each site
 mod.fe <- lm(ln.prich~ ln.ptotmass + ln.pprod + psitecode, data = dat)
 summary(mod.fe)
 
 # Fit a model with a random intercept for each site
-mod.re <- lmer(ln.prich~ ln.ptotmass + ln.pprod + (1 | psitecode), data = dat)
+mod.re <- lmer(ln.prich ~ ln.ptotmass + ln.pprod + (1 | psitecode), data = dat)
 summary(mod.re)
 
 # We can get confidence intervals for each of the slope estimates
@@ -366,19 +379,21 @@ mod.re.null <- lmer(ln.prich~ ln.ptotmass + (1 | psitecode), data = dat)
 anova(mod.re.null, mod.re)
 ```
 
-
 ### Questions
-* How should we interpret each of the fixed effects in mod.fe? 
-* Compare the estimates of the models which account for site with the estimates of the model which naively does not account for site.
 
+-   How should we interpret each of the fixed effects in mod.fe?
+-   Compare the estimates of the models which account for site with the estimates of the model which naively does not account for site.
 
 Suppose we think that each site may have it's own random intercept, as well as it's own random slope for total mass. We can fit that model using the following code
+
 ```{r}
 # Fit a model with a random intercept and slopes for each site
-mod.re2 <- lmer(ln.prich~ ln.pprod + (1 + ln.pprod | psitecode), data = dat)
+mod.re2 <- lmer(ln.prich ~ ln.pprod + (1 + ln.pprod | psitecode), data = dat)
 summary(mod.re2)
 
 ```
+
 ### Questions
-* How would we interpret the random slopes in this context?
-* Do you think it makes sense to include random slopes? 
+
+-   How would we interpret the random slopes in this context?
+-   Do you think it makes sense to include random slopes?
